[project]
name = "streamlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
    "streamlit-autorefresh>=1.0.1",
    "watchdog>=6.0.0",
    "xlsxwriter>=3.2.9",
]
